--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ p {
 a {
     font-family: Raleway;
     font-style: normal;
-    font-weight: normal;
+    font-weight: bold;
     color: var(--navyblue);
 }
 
@@ -798,7 +798,8 @@ li {
     }
 
     .file-example p {
-        margin-right: 48px;
+        margin-right: 24px;
+        max-width: 142px;
     }
 
     .chat-box {
@@ -943,7 +944,10 @@ li {
 
     .wrapper {
         padding: 0 16px;
-        /* height: 65vh; */
+    }
+
+    .extra {
+        height: 65vh;
     }
 
     .mobile-white-bcg {
@@ -980,6 +984,10 @@ li {
         font-size: 1em;
     }
 
+    .tabbar a:nth-child(1) {
+        display: none;
+    }
+
     .nav-icon {
         display: flex;
         margin: 0 auto;
@@ -994,12 +1002,13 @@ li {
     .header {
         height: 80px;
         background: var(--navyblue);
-        display: flex;
-        justify-content: center;
+        /* display: flex;
+        justify-content: center; */
+        text-align: center;
     }
 
     .header img {
-        padding: 8px;
+        transform: translateY(12px);
     }
 
     #navlist {
@@ -1189,10 +1198,6 @@ li {
 
         background: white;
         border-radius: 20px;
-    }
-
-    .article-example div:nth-of-type(1) {
-        margin-left: 8px;
     }
 
     .article-example img {
