--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,9 +83,6 @@ h4 {
     top: 0px;
     width: 100%;
     z-index: 99;
-    /* left: 264px;
-    display: flex;  
-    align-items: center;*/
 
     box-shadow: 0px 5px 8px rgba(0, 67, 101, 0.25);
 }
@@ -1088,9 +1085,13 @@ li {
         height: auto;
     }
 
+    #cases .case-box:first-child {
+        margin-top: 8px;
+    }
+
     #cases .case-box p {
         display: block;
-        padding: 12px 0 0 16px;
+        padding: 16px 0 0 16px;
         margin: 0;
     }
 
