--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,7 @@ h4 {
     font-style: normal;
     font-weight: bold;
     font-size: 1em;
+    margin: 0;
 }
 
 /* side navigation desktop */
@@ -334,22 +335,6 @@ li {
     margin-right: 0;
 }
 
-.service-box p:first-of-type {
-    margin-left: 4px 0;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    color: var(--green);
-}
-
-.service-box p {
-    margin: 8px 0;
-}
-
-.service-box h4 {
-    margin: 8px 0 0 0;
-}
-
 /* cases content */
 #cases h2 {
     display: inline-block;
@@ -358,7 +343,6 @@ li {
 /* profile content */
 #profile h4 {
     color: var(--navyblue);
-    margin: 0;
     display: flex;
     align-items: center;
 }
@@ -625,6 +609,38 @@ li {
     border-radius: 20px;
 }
 
+#app-calendar {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+
+.day {
+    text-align: center;
+    font-size: 12px;
+    padding: 16px 8px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+}
+
+.dayName {
+    padding: 0;
+    text-align: center;
+    margin: 40px 0 0 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dayName li {
+    display: inline;
+    font-size: 1em;
+    padding: 8px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+}
+
 .chat-container {
     width: 31%;
     height: auto;
@@ -697,26 +713,27 @@ li {
     display: inline-block;
 }
 
-/* #memberclub h2 {
-    margin-bottom: 24px;
-} */
-
 .gratis-services-box {
     width: 380px;
     height: 456px;
     float: right;
-    /* background: white; */
     padding: 77px 32px 0 16px;
 }
 
-.service-example img {
+.category {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    color: var(--green);
+}
+
+.service img {
     float: left;
     margin-right: 12px;
 }
 
 .service-example p {
     text-align: left;
-    margin: 0;
 }
 
 .discount-example, .test-example {
@@ -947,7 +964,7 @@ li {
         justify-content: space-between;
     }
     
-    .article-example div {
+    .article-box {
         width: 268px;
         padding: 16px;
         float: left;
@@ -957,17 +974,13 @@ li {
         border-radius: 30px;
     }
 
-    .article-example p:first-of-type {
-        margin: 8px 0;
-        font-family: Raleway;
-        font-style: normal;
-        font-weight: bold;
-        font-size: .75em;
-        color: var(--green);
+    .article-box .cut-text {
+        height: 58px;
+        margin: 8px 0 16px 0;
     }
 
-    .article-example p:nth-of-type(2) {
-        height: 58px;
+    .article-box .category {
+        margin: 8px 0 16px 0;
     }
 
     .article-example h4 {
@@ -987,7 +1000,11 @@ li {
         display: none;
     }
 
-    .service-example div{
+    .category {
+        margin: 0 0 8px 0;
+    }
+
+    .service {
         width: auto;
         height: 107px;
         padding: 16px;
@@ -998,6 +1015,11 @@ li {
         background: white;
         border-radius: 20px;
     }
+
+    .cut-text {
+        margin: 0;
+    }
+
 }
 
 /* mobile screen */
@@ -1097,6 +1119,10 @@ li {
         padding: 0 16px;
     }
 
+    .update p {
+        margin: 0 0 0 24px;
+    }
+
 /* mobile cases */
     #cases .updates-box {
         display: none;
@@ -1138,7 +1164,6 @@ li {
     #case-example h4 {
         display: flex;
         align-items: center;
-        margin: 0;
     }
 
     .case-navigation a {
@@ -1216,6 +1241,20 @@ li {
     }
 
 /* mobile member club*/
+    .category {
+        margin: 4px 0;
+        font-size: .75em;
+    }
+
+    .cut-text {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        margin: 4px 0;
+        font-size: .75em;
+    }
+
     .discounts-container, .test-container {
         overflow: auto;
         white-space: nowrap;
@@ -1257,10 +1296,9 @@ li {
         margin-top: 32px;
     }
 
-    .article-example {
-        width: 320px;
+    .article-box {
         height: 140px;
-        padding: 8px 12px;
+        padding: 8px;
         margin-bottom: 16px;
         text-align: left;
         display: flex;
@@ -1270,20 +1308,15 @@ li {
         border-radius: 20px;
     }
 
+    .article-box div {
+        margin-left: 8px;
+    }
+
     .article-example img {
         float: left;
         height: 132px;
         width: 132px;
         border-radius: 20px;
-    }
-
-    .article-example h4 {
-        font-size: 1em;
-        margin: 0;
-    }
-
-    .article-example p {
-        margin: 0;
     }
 
     .gratis-services-box {
@@ -1294,10 +1327,9 @@ li {
         margin-top: 32px;
     }
 
-    .service-example {
-        width: 312px;
+    .service {
         height: auto;
-        padding: 16px;
+        padding: 8px;
         margin-bottom: 16px;
         text-align: left;
         display: flex;
@@ -1307,8 +1339,8 @@ li {
         border-radius: 20px;
     }
 
-    .service-example img {
-        margin: 0;
+    .service div {
+        margin-left: 8px;
     }
 
 /* mobile profile */
