--- a/stylesheet.css
+++ b/stylesheet.css
@@ -796,6 +796,10 @@ li {
         background: white;
     }
 
+    .only-mobile {
+        display: none;
+    }
+
     .header img {
         display: none;
     }
@@ -1091,13 +1095,15 @@ li {
     .header {
         height: 80px;
         background: var(--navyblue);
-        /* display: flex;
-        justify-content: center; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         text-align: center;
     }
 
-    .header img {
-        transform: translateY(12px);
+    .only-mobile svg {
+        color: white;
+        font-size: 1.75em;
     }
 
     #navlist {
@@ -1106,6 +1112,16 @@ li {
 
     span {
         font-weight: bold;
+    }
+
+    .toggle-btn p {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: normal;
+    }
+
+    .switch {
+        margin-left: 8px;
     }
 
 /* mobile home */
@@ -1255,6 +1271,10 @@ li {
         font-size: .75em;
     }
 
+    #memberclub a {
+        font-size: .75em;
+    }
+
     .discounts-container, .test-container {
         overflow: auto;
         white-space: nowrap;
@@ -1354,7 +1374,7 @@ li {
 
     .personal-data {
         width: 100%;
-        height: 888px;
+        height: 864px;
         margin-top: 24px;
     
         background: white;
